--- a/CV.html
+++ b/CV.html
@@ -42,7 +42,7 @@
                     <h2>Contacto</h2>
                     <p>Email: Tomaselorrietaa@gmail.com</p>
                     <p>Teléfono: 2284-718996</p>
-                    <a href="https://www.linkedin.com/in/tomas-elorrieta/">linkedin</a>
+                    <a href="https://www.linkedin.com/in/tomas-elorrieta/" target="blank"><img align="center" src="https://user-images.githubusercontent.com/88904952/234979284-68c11d7f-1acc-4f0c-ac78-044e1037d7b0.png" alt="linkedin" height="30" width="30" /></a>
                 </section>
             </div>
         </div>
